--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,104 @@
-.books-container{
-    display: flex;
+body{
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
+h3, h4{
+    padding: 0;
+    margin: 2.5px;
+}
+.nav-bar{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(241, 229, 182);
+}
+
+p{
+    font-family: "Caprasimo", serif;
+    font-size: larger;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.books-container{
+    margin: 20px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .book-El{
-    width: 150px;
-    height: 200px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: space-between;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+button{
+    padding: 8px 15px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    
+}
+
+.had-read-the-book{
+    background-color: rgb(104, 167, 86);
+    border: 2px solid rgb(104, 167, 86);
+    color: white;
+    font-weight: bold;
+}
+.not-read-the-book{
+    background-color: whitesmoke;
+    border: 2px solid gray;
+    color: gray;
+    font-weight: bold;
+}
+
+.remove-button{
+    border: 2px solid rgb(104, 167, 86);
+    background-color: white;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .new-book{
-    margin: 0 auto;
-    display: block;
+    background-color: rgb(241, 229, 182);
+    border-radius: 0px;
+    border: 1px solid rgb(241, 229, 182);
     cursor: pointer;
+    font-size: medium;
+}
+
+.new-book:hover{
+    background-color: rgb(145, 126, 50);
+    color: white;
+}
+
+form{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+input{
+    padding: 10px;
+    width: 20%;
+    border: 1px solid rgb(145, 126, 50);
+}
+
+.submit-btn{
+    cursor: pointer;
+    width: 10%;
+    border: 2px solid rgb(145, 126, 50);
+    background-color: white;
+    font-weight: bold;
 }
